sumo/tests/duarouter/alternatives/style1_input/errors/vehicle/vehicle_empty_departlane/errors.duarouter
Error: Attribute 'departlane' in definition of a vehicle is empty.
Error: Invalid departlane definition for vehicle '1'
Quitting (on error).
